--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,19 @@
 		<artifactId>repodriller</artifactId>
 		<version>1.2.1</version>
 	</dependency> 
+	<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
+<dependency>
+    <groupId>org.eclipse.emf</groupId>
+    <artifactId>org.eclipse.emf.common</artifactId>
+    <version>2.12.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.ecore -->
+<dependency>
+    <groupId>org.eclipse.emf</groupId>
+    <artifactId>org.eclipse.emf.ecore</artifactId>
+    <version>2.12.0</version>
+</dependency>
+
   </dependencies>
   
 </project>
