gitignore spl-data csv files & mysql workbench .baks

--- a/src/main/resources/spl-data/.gitignore
+++ b/src/main/resources/spl-data/.gitignore
@@ -1,1 +1,6 @@
 /spl-data/*
+/spl-data
+/spl-data/data-inserts.sql
+/spl-data/olapInserts.sql
+/spl-data/olapCustoms.mwb.bak
+/spl-data/diagram.mwb.bak
