--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,13 @@
 		<version>1.2.1</version>
 	</dependency> 
 	<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
-<dependency>
-    <groupId>org.eclipse.emf</groupId>
-    <artifactId>org.eclipse.emf.common</artifactId>
-    <version>2.12.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.ecore -->
-<dependency>
-    <groupId>org.eclipse.emf</groupId>
-    <artifactId>org.eclipse.emf.ecore</artifactId>
-    <version>2.12.0</version>
-</dependency>
 
+<!-- 
+	<dependency>
+	    <groupId>org.eclipse.jgit</groupId>
+	    <artifactId>org.eclipse.jgit</artifactId>
+	    <version>3.5.0.201409260305-r</version>
+	</dependency>-->
 
   </dependencies>
   
