--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,38 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.onekin</groupId>
-  <artifactId>testingRepoDriller</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-  
-
-	<dependency>
-    <groupId>net.sourceforge.streamsupport</groupId>
-    <artifactId>streamsupport</artifactId>
-    <version>1.1.2</version>
-</dependency>
-
-	<dependency>
-		<groupId>org.repodriller</groupId>
-		<artifactId>repodriller</artifactId>
-		<version>1.2.1</version>
-	</dependency> 
-	<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.onekin</groupId>
+	<artifactId>testingRepoDriller</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
 
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
-  </dependencies>
-  
+	<dependencies>
+
+
+		<dependency>
+			<groupId>net.sourceforge.streamsupport</groupId>
+			<artifactId>streamsupport</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.repodriller</groupId>
+			<artifactId>repodriller</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
+
+
+
+
+	</dependencies>
+
 </project>
