--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 			<artifactId>streamsupport</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+			<version>4.11.7.201903122105-r</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.repodriller</groupId>
